[package]
name = "gitignoregen"
version = "0.1.3"
authors = ["Patrik Laurell <patrik.laurell@gmail.com>"]
edition = "2021"
description = "A minimal CLI wrapper around Toptal gitignore"
readme = "README.md"
repository = "https://github.com/patriklaurell/gitignoregen-rs"
license = "MIT"

[dependencies]
ctrlc = "3.4.5"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
reqwest = "0.12.7"
termion = "4.0.2"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "gitignoregen"
path = "src/main.rs"
